# FieldsEngine

./: .feproj  .gitignore  Application.h  CMakeLists.txt  FieldsEngine.sln  FieldsEngine.vcxproj  FieldsEngine.vcxproj.filters  README.md  generated_sources.cmake  imgui.ini  lighting.frag  lighting.vert  names.txt  new_file.py  scene.json  todo.txt  update_sources.py
Libraries/: glad.cpp
Libraries/imGui/: imgui_stdlib.cpp
Source/: Main.cpp  application.cpp  application.h  editor_icons.cpp  editor_icons_all.cpp  editor_icons_all.h  input.cpp  input.h  precompiled.h  text.cpp  text.h
Source/stubs/: stub.cpp  stub.h
assets/: Snow.scene.fea  fround.material.fea  miles.texture.fea  needle.material.fea  nutcracker.mesh.fea  nutcracker2.mesh.fea  scarf.material.fea  scene.json  snow.material.fea  snowman.level.fea  snowman.scene.fea  tree_top.mesh.fea
assets/Directory1/: bed_2.mesh.fea
assets/Directory1/hello/bye/: nest.material.fea
assets/Directory1/hello2/Directory2/: cube_2_2.mesh.fea
content/: bed.mesh.fea  carrot.mesh.fea  eye_mesh.fea  miles.texture.fea  miles_compressed.fea  miles_compressed.texture.fea  mound.mesh.fea  nose.fea  nutcracker.mesh.fea  obj.mesh.fea  tree_trunk.fea  wood.fea  x.fea  y.fea  z.material.fea
include/: application.h  asset.h  asset_browser.h  asset_entry.h  asset_loader.h  asset_manager.h  camera_component.h  camera_controller.h  component.h  context.h  context_ownership.h  drag_drop.h  editor.h  editor_icons.h  editor_icons_all.h  editor_manager.h  editor_window.h  entity.h  error.h  external_config.h  fields_engine.h  fields_engine_defines.h  graphics.h  input.h  material.h  mem_util.h  mesh.h  mesh_component.h  mesh_import.h  physical_component.h  polymorphic.h  precompiled.h  project.h  project_settings.h  reflection.h  scene.h  scroll_stack.h  serial_conversion.h  shader.h  spatial_component.h  (+7 more)
libraries/includes/imGui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_tables.cpp  imgui_widgets.cpp
shaders/: lighting.vert
source/: application.cpp  asset.cpp  asset.h  asset_browser.cpp  asset_entry.cpp  asset_loader.cpp  asset_loader.h  asset_manager.cpp  asset_manager.h  box.h  camera.cpp  camera.h  camera_component.cpp  camera_controller.cpp  camera_controller.h  common.h  component.cpp  component.h  context.h  context_ownership.h  drag_drop.cpp  editor.cpp  editor.h  editor_icons.h  editor_manager.cpp  editor_manager.h  editor_window.cpp  editor_window.h  entity.cpp  entity.h  error.h  fields_engine.cpp  fields_engine_defines.h  frame_buffer.cpp  frame_buffer.h  graphics.cpp  graphics.h  input.cpp  log.cpp  log.h  (+40 more)
source_temp/: editor.cpp  editor_icons_all.cpp  editor_window.cpp  entity.cpp  mesh.cpp
stub/: new_file_template.cpp  new_file_template.h
